finish the Hero banner component on starting page

--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@ body {
   
   .hero-banner-img {
     position: absolute;
-    right: 40px;
-    top: 0px;
-    width: 700px;
+    right: -240px;
+    top: 10px;
+    width: auto;
     height: 900px;
     margin-top: -330px;
   
